--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_DSN = mysql:host=db;port=3306;dbname=BlockGame_DB
+DB_DSN = mysql:host=localhost;port=3306;dbname=BlockGame_DB
 DB_USER = root
 DB_PASSWORD = 1234abc.
